# SR1

./: CMakeLists.txt  CMakePresets.json  lib.cpp  lib.h  main.cpp  test_version.cpp
.github/workflows/: release.yml
SR1/: CMakeLists.txt  SR1.cpp  SR1.h
